--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "url": "https://github.com/gabodmc/nodejs-boilerplate"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "mocha ./test/*.js"
+    
   },
   "engines": {
     "node": ">=0.14"
@@ -26,7 +27,6 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15",
     "sequelize": "^6.19.0",
     "sequelize-cli": "6.2.0"
   },
@@ -34,6 +34,7 @@
     "chai": "^4.3.4",
     "jest": "27.0.6",
     "mocha": "^9.1.3",
+    "nodemon": "^2.0.20",
     "prettier": "2.3.2",
     "supertest": "^6.1.6"
   }
