--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0",
-    "sequelize-cli": "6.2.0"
+    "sequelize-cli": "6.2.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
